RESOLVED FIXED135361
REGRESSION(r164133): Selection disappears after scrolling on nytimes.com
https://bugs.webkit.org/show_bug.cgi?id=135361
Summary REGRESSION(r164133): Selection disappears after scrolling on nytimes.com
alan
Reported 2014-07-28 15:43:01 PDT
1. Load nytimes.com 2. Select all content 3. start scrolling up and down (it may require a few iterations but I was able to repro it almost always) Expected result: content stays selected. Actual result: after scrolling the content gets deselected. <rdar://problem/17824793>
Attachments
Patch (10.45 KB, patch)
2014-07-28 15:54 PDT, alan
no flags
Patch (10.52 KB, patch)
2014-07-28 16:29 PDT, alan
no flags
alan
Comment 1 2014-07-28 15:54:36 PDT
Ryosuke Niwa
Comment 2 2014-07-28 16:03:54 PDT
Comment on attachment 235626 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=235626&action=review > LayoutTests/fast/dynamic/selection-gets-cleared-when-part-of-it-gets-removed-expected.html:3 > + <title>This tests that selection stays on when part of the selection gets removed.</title> Nit: wrong indentations! Ditto elsewhere in the file. > LayoutTests/fast/dynamic/selection-gets-cleared-when-part-of-it-gets-removed.html:3 > + <title>This tests that selection stays on when part of the selection gets removed.</title> Nit: wrong indentations! Ditto elsewhere in the file. > LayoutTests/fast/dynamic/selection-gets-cleared-when-part-of-it-gets-removed.html:15 > + Nit: whitespaces. > LayoutTests/fast/dynamic/selection-gets-cleared-when-part-of-it-gets-removed.html:21 > + Nit: whitespaces.
alan
Comment 3 2014-07-28 16:29:48 PDT
WebKit Commit Bot
Comment 4 2014-07-28 18:46:14 PDT
Comment on attachment 235638 [details] Patch Clearing flags on attachment: 235638 Committed r171718: <http://trac.webkit.org/changeset/171718>
WebKit Commit Bot
Comment 5 2014-07-28 18:46:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.